# wave-engine

./: CONTRIBUTING.md  LICENSE  README.md
editor/: CMakeLists.txt  editor_ui_layer.cpp  editor_ui_layer.hpp
editor/app/: editor_app.cpp  editor_app.hpp  main.cpp
editor/app/entry/: main.cpp
editor/ui/: editor_ui.cpp  editor_ui.hpp  ui_context.cpp  ui_context.hpp  ui_element.cpp  ui_element.hpp  ui_input_router.cpp  ui_input_router.hpp
editor/ui/docking/: docking_layout.cpp  docking_layout.hpp
editor/ui/panels/: panel_manager.cpp  panel_manager.hpp  ui_panel.cpp  ui_panel.hpp
editor/ui/render/: editor_ui_renderer.cpp  editor_ui_renderer.hpp  ui_draw_command.hpp  ui_draw_list.cpp  ui_draw_list.hpp
engine/: CMakeLists.txt
engine/assets/: asset_database.cpp  asset_database.hpp  asset_id.hpp  asset_metadata.hpp
engine/core/: engine_core.cpp  engine_core.hpp
engine/core/config/: config.cpp  config.hpp  config_system.cpp  config_system.hpp
engine/core/debug/: assert.cpp  assert.hpp
engine/core/environment/: environment.cpp  environment.hpp
engine/core/events/: editor_events.hpp  event.hpp  event_bus.cpp  event_bus.hpp  event_system.cpp  event_system.hpp
engine/core/logging/: log.cpp  (+1 more)
engine/render/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  render_backend.hpp  render_system.cpp  render_system.hpp
engine/tools/: shader_compiler.cpp  shader_compiler.hpp
engine/ui/: vulkan_ui_renderer.cpp  vulkan_ui_renderer.hpp
launcher/: CMakeLists.txt
launcher/app/: launcher_app.cpp  launcher_app.hpp  main.cpp
launcher/drm/: drm_manager.cpp  drm_manager.hpp
(+64 files in other folders)
